spec/e2e/field/call_nonfunction_field.lit
type Foo {}

let foo = Foo();
foo.bar = "not fn";

foo.bar(); # error: [line 6] Runtime error: Can only call functions and types.
